--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.novoda:bintray-release:0.3.4'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://jitpack.io' }
+        maven { url "https://dl.bintray.com/tangsiyuan/maven" }
     }
 }
 
